--- a/.github/workflows/3-upload-test-reports.yml
+++ b/.github/workflows/3-upload-test-reports.yml
@@ -51,10 +51,16 @@ jobs:
 
     steps:
       # We'll need to check out the repository so that we can edit the README.
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4 
+      - name: Run markdown lint
+        run: |
+          npm install remark-cli remark-preset-lint-consistent vfile-reporter-json
+          npx remark . --use remark-preset-lint-consistent --report vfile-reporter-json 2> remark-lint-report.json
+  
+      - uses: actions/upload-artifact@v4
         with:
-          fetch-depth: 0 # Let's get all the branches.
+          name: remark-lint-report
+          path: remark-lint-report.json
 
       # Verify the learner added actions/upload-artifact.
       - name: Verify workflow
